src/test/ui/const-generics/invariant.base.stderr
error[E0308]: mismatched types
  --> $DIR/invariant.rs:29:5
   |
LL | ) -> &'static Foo<fn(&'static ())> {
   |      ----------------------------- expected `&'static Foo<fn(&'static ())>` because of return type
LL |     v
   |     ^ types differ
   |
   = note: expected reference `&'static Foo<fn(&'static ())>`
              found reference `&'static Foo<for<'a> fn(&'a ())>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
